# sphinx-subfigure

./: .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  README.md  codecov.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.md
docs/_static/: custom.css
src/sphinx_subfigure/: __init__.py  main.py  tr_html.py  tr_latex.py
tests/: test_simple.py
tests/fixtures/: build_html.txt  build_latex.txt  posttransform_html.txt  posttransform_latex.txt  posttransform_man.txt
