[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_subfigure"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Framework :: Sphinx :: Extension",
]
keywords = ["sphinx", "subfigure"]
requires-python = ">=3.11"
dependencies = ["sphinx>=8,<10"]

[project.optional-dependencies]
testing = [
    "beautifulsoup4",
    "defusedxml",
    "pytest",
    "pytest-cov",
    "pytest-param-files~=0.6.0",
    "sphinx-pytest~=0.3.0",
]
docs = [
    "myst-parser",
    "furo"
]

[project.urls]
Homepage = "https://github.com/sphinx-extensions2/sphinx-subfigure"
Documentation = "https://sphinx-subfigure.readthedocs.io"

[tool.flit.sdist]
exclude = [
    "docs/",
    "tests/",
]

[tool.ruff.lint]
extend-select = ["B", "C4", "FA", "FURB", "I", "ICN", "ISC", "N", "PERF", "PGH", "PIE", "RUF", "SIM", "UP"]
extend-ignore = ["ISC001", "RUF005", "RUF012"]
